commit translated contents

--- a/docs/docs-ref-autogen/word/word.contentcontrol.yml
+++ b/docs/docs-ref-autogen/word/word.contentcontrol.yml
@@ -508,7 +508,7 @@ items:
           - word.Word.InlinePictureCollection
   - uid: word.Word.ContentControl.insertBreak
     summary: |-
-      在主文档的指定位置插入分隔符。 insertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。 此方法不能与 "RichTextTable"、"RichTextTableRow" 和 "RichTextTableCell" 内容控件一起使用。
+      在主文档的指定位置插入分隔符。 InsertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。 此方法不能与 "RichTextTable"、"RichTextTableRow" 和 "RichTextTableCell" 内容控件一起使用。
 
       \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertBreak(breakType, insertLocation)'
@@ -533,7 +533,7 @@ items:
             - Word.InsertLocation
   - uid: word.Word.ContentControl.insertBreak_1
     summary: |-
-      在主文档的指定位置插入分隔符。 insertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。 此方法不能与 "RichTextTable"、"RichTextTableRow" 和 "RichTextTableCell" 内容控件一起使用。
+      在主文档的指定位置插入分隔符。 InsertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。 此方法不能与 "RichTextTable"、"RichTextTableRow" 和 "RichTextTableCell" 内容控件一起使用。
 
       \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertBreak(breakTypeString, insertLocation)'
@@ -615,7 +615,7 @@ items:
         description: ''
       parameters:
         - id: base64File
-          description: 必需。 .docx 文件的 base64 编码内容。
+          description: 必需。 .Docx 文件的 base64 编码内容。
           type:
             - string
         - id: insertLocation
@@ -640,7 +640,7 @@ items:
         description: ''
       parameters:
         - id: base64File
-          description: 必需。 .docx 文件的 base64 编码内容。
+          description: 必需。 .Docx 文件的 base64 编码内容。
           type:
             - string
         - id: insertLocationString
@@ -884,7 +884,7 @@ items:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: word.Word.ContentControl.insertParagraph
     summary: |-
-      在指定位置插入段落。 insertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。
+      在指定位置插入段落。 InsertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertParagraph(paragraphText, insertLocation)'
@@ -909,7 +909,7 @@ items:
             - Word.InsertLocation
   - uid: word.Word.ContentControl.insertParagraph_1
     summary: |-
-      在指定位置插入段落。 insertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。
+      在指定位置插入段落。 InsertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertParagraph(paragraphText, insertLocationString)'
@@ -974,7 +974,7 @@ items:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: word.Word.ContentControl.insertTable
     summary: |-
-      将包含指定行数和列数的 table 插入 contentControl 中或在其旁边插入。 insertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。
+      将包含指定行数和列数的 table 插入 contentControl 中或在其旁边插入。 InsertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertTable(rowCount, columnCount, insertLocation, values)'
@@ -1007,7 +1007,7 @@ items:
             - 'string[][]'
   - uid: word.Word.ContentControl.insertTable_1
     summary: |-
-      将包含指定行数和列数的 table 插入 contentControl 中或在其旁边插入。 insertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。
+      将包含指定行数和列数的 table 插入 contentControl 中或在其旁边插入。 InsertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertTable(rowCount, columnCount, insertLocationString, values)'
@@ -1155,7 +1155,7 @@ items:
 
       `load(option?: { select?: string; expand?: string; }): Word.ContentControl`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.ContentControl`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.ContentControl`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -1758,7 +1758,7 @@ items:
               myContentControl.tag = 'Customer-Address';
               myContentControl.title = ' has t';
               myContentControl.style = 'Heading 2';
-              myContentControl.insertText('One Microsoft Way, Redmond, WA 98052', 'replace');
+              myContentControl.insertText('One Microsoft Way, Redmond, WA 98052', 'Replace');
               myContentControl.cannotEdit = true;
               
               // Queue a command to load the id property for the content control you created.
